_sass/base/_variables.scss
// Typography
$font-family-main: 'Poppins', Helvetica, Arial, sans-serif;
$font-family-headings: 'Poppins', Helvetica, Arial, sans-serif;
$font-family-logo: 'Poppins', Helvetica, Arial, sans-serif;
$font-size: 1.25em;

// Padding
$padding-x-large: 23%;
$padding-large: 9%;
$padding-medium: 6%;
$padding-small: 4%;
$padding-x-small: 3%;

// Sepcific Padding
$title-padding: 1%;
$feature-image-padding: 10%;

// Mobile display
$xl-break: 2000px;
$l-break: 1400px;
$m-break: 1000px;
$break: 768px;
$sm-break: 576px;
$x-sm-break: 300px;

// Brand colours
$theme-color: #337ab7;
$brand-color: #fff;
$background-color: #eff4ef; 
$border-color: rgba(0, 0, 0, 0.1); // rgba recommended if using feature images

// Typography colours
$text-color: #262626;
$meta: #595959; //lowest gray for accessible color
$link-color: $theme-color;
$selection-color: #F8ED59; // visible when highlighting text
$blockquote-color: #EEF7FA; // $background-color;

// Header
$header-background-color: darken($theme-color, 50%); // Only used when no header image
$header-text-color: #fff;
$header-link-color: white;
$navbar-separator-opacity: 0;

// Feature image for articles
$feature-image-text-color: #fff;
$feature-image-size: cover; // options include "cover", "contain", "auto"

//Search colours
$link-shadow: transparentize($link-color, .6); //rgba(26, 188, 156, 0.6);
$text-shadow: #3f3f3f;
$search-color: #999;


/*  Syntax highlighting  */
// Syntax typography
$monospace: Consolas, Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono, Bitstream Vera Sans Mono, Courier New, monospace, sans-serif !default;
$font-size-code: 0.85em !default;
$font-height-code: 1.3em !default;
$border-radius: 4px !default;

// base16 Material Theme
$base00: #302f2d !default; // Default Background
$base01: #2E3C43 !default; // Lighter Background (Used for status bars) - NOT USED
$base02: #314549 !default; // Selection Background - NOT USED
$base03: #546E7A !default; // Dark Foreground (Used for status bars) - NOT USED
$base04: #B2CCD6 !default; // Comments, Invisible, Line Highlighting
$base05: #EEFFFF !default; // Light Foreground (Not often used)
$base06: #EEFFFF !default; // Light Background (Not often used)
$base07: #FFFFFF !default; // Default Foreground, Default text color
$base08: #F07178 !default; // Parenthesis, Caret, Delimiters, Operators
$base09: #F78C6C !default; // Classes, Markup Bold, Search Text Background
$base0a: #FFCB6B !default; // Strings, Inherited Class, Markup Code, Diff Inserted
$base0b: #98C379 !default; // Functions, Methods, Attribute IDs, Headings
$base0c: #89DDFF !default; // Support, Regular Expressions, Escape Characters, Markup Quotes
$base0d: #82AAFF !default; // Keywords, Storage, Selector, Markup Italic, Diff Changed
$base0e: #C792EA !default; // Integers, Boolean, Constants, XML Attributes, Markup Link Url
$base0f: #FF5370 !default; // Deprecated, Opening/Closing Embedded Language Tags e.g.

// base16 Monokai
//$base00: #272822 !default; // Default Background
//$base01: #383830 !default; // Lighter Background (Used for status bars)
//$base02: #49483e !default; // Selection Background
//$base03: #75715e !default; // Dark Foreground (Used for status bars)
//$base04: #a59f85 !default; // Comments, Invisible, Line Highlighting
//$base05: #f8f8f2 !default; // Light Foreground (Not often used)
//$base06: #f5f4f1 !default; // Light Background (Not often used)
//$base07: #f9f8f5 !default; // Default text color
//$base08: #f92672 !default; // Parenthesis, Caret, Delimiters, Operators
//$base09: #fd971f !default; // Classes, Markup Bold, Search Text Background
//$base0a: #e6db74 !default; // Strings, Inherited Class, Markup Code, Diff Inserted
//$base0b: #a6e22e !default; // Functions, Methods, Attribute IDs, Headings
//$base0c: #a1efe4 !default; // Support, Regular Expressions, Escape Characters, Markup Quotes
//$base0d: #66d9ef !default; // Keywords, Storage, Selector, Markup Italic, Diff Changed
//$base0e: #ae81ff !default; // Integers, Boolean, Constants, XML Attributes, Markup Link Url
//$base0f: #cc6633 !default; // Deprecated, Opening/Closing Embedded Language Tags e.g.

